fix: spacing and redundant styles

--- a/blocks/form/__input/form__input.css
+++ b/blocks/form/__input/form__input.css
@@ -4,7 +4,6 @@
   line-height: 17px;
   margin: 0 0 30px;
   padding: 0 0 9px;
-  font-weight: 400;
   color: black;
   opacity: 1;
   border: none;
